--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,8 @@
 <h4>Welcome to User API</h4>
 <br/>
 
+
+Get All the users
 <button onclick="getUsers()">GET All Users</button><br/>
 <p id="demo"></p>
 
