--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@ Add a user(JSON format) <textarea name=adduser type=text id=adduser rows="10" co
 <button onclick="addUser(document.getElementById('adduser').value)">POSTUser</button>
 <p id="demo3"></p>
 
-Update a user(JSON format) <input name=updateuser type=text id=updateuser size="100">
+Update a user(JSON format) <textarea name=updateuser type=text id=updateuser rows="10" cols="50"></textarea>
 <button onclick="updateUser(document.getElementById('updateuser').value)">PUTUser</button>
 <p id="demo4"></p>
 
